2007/01/14
.added support for CCodePhrase

2006/12/16
.updated support for ArchetypeSlot