@@ -1,0 +1,21 @@
+archetype
+	adl-test-ENTRY.most_minimal.draft	
+concept 
+	[at0000]
+language
+	original_language = <"en"> 	
+definition
+	ENTRY[at0000] matches {*}
+ontology 
+	primary_language = <"en">
+	languages_available = <"en", ...>
+	term_definitions = <
+		["en"] = <
+			items = <
+				["at0000"] = <
+					text = <"most minimal">
+					description = <"most minimal">
+				>
+			>
+		>
+	>
